[closes #34] Upgrade to WildFly 16.0.0.Final